--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.4",
     "react-chat-engine": "^1.11.28",
     "react-dom": "^18.3.1",
+    "react-google-button": "^0.8.0",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
