--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-chat-engine": "^1.11.28",
     "react-dom": "^18.3.1",
     "react-google-button": "^0.8.0",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
