--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-calendar": "^5.0.0",
     "react-chat-engine": "^1.11.28",
     "react-dom": "^18.3.1",
     "react-google-button": "^0.8.0",
