--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,8 @@
-DATABASE_URI=""
-SECRET_KEY=""
-AWS_ACCESS_KEY_ID=""
-AWS_SECRET_ACCESS_KEY=""
-AWS_DEFAULT_REGION=""
-BUCKET_NAME=""
+DATABASE_URI=
+SECRET_KEY=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
+AWS_ENDPOINT_URL=
+AWS_PUBLIC_URL_BASE=
+BUCKET_NAME=
