--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,6 +37,8 @@ Mako==1.3.5
 MarkupSafe==2.1.5
 msgspec==0.18.6
 multidict==6.0.5
+packaging==25.0
+psycopg2==2.9.10
 pycares==4.4.0
 pycparser==2.22
 PyJWT==2.9.0
